--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -463,7 +463,7 @@
                         />
                         <button
                         @click="clearSearch"
-                        class="absolute top-2 left-2 text-red-400 hover:text-red-600 transition"
+                        class="absolute top-3 left-3 text-red-400 hover:text-red-600 font-black transition"
                         >
                         ✕
                         </button>
