--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -450,7 +450,7 @@
                 <transition name="fade-slide">
                     <div
                     v-if="searchOpen"
-                    class="absolute top-12 left-0 bg-gray-800 border border-teal-600 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100"
+                    class="absolute top-12 left-0 bg-gray-800 border-2 border-teal-600 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100"
                     @click.stop
                     >
                     <!-- 🔤 Search Input -->
@@ -513,7 +513,7 @@
                             />
                             <span class="px-2 font-bold">الرقم</span>
                         </label>
-                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                        <!-- <label class="flex items-center transition-all duration-100 active:scale-90">
                             <input
                             type="checkbox"
                             v-model="searchFilters.story"
@@ -530,7 +530,7 @@
                             @change="ensureOneChecked('summary')"
                             />
                             <span class="px-2 font-bold">الملخص</span>
-                        </label>
+                        </label> -->
                         </div>
                     </fieldset>
                     </div>
