--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -437,7 +437,7 @@
                 <!-- 🔍 Icon -->
                 <button
                     @click.stop="toggleSearch" :disabled="loading"
-                    class="bg-gray-700 text-white p-2 rounded-full shadow-md transition-all duration-200 active:scale-90 hover:bg-teal-600 disabled:opacity-50 disabled:cursor-not-allowed"
+                    class="bg-gray-700 text-white p-2 rounded-full shadow-md transition-all duration-100 active:scale-90 hover:bg-teal-600 disabled:opacity-50 disabled:cursor-not-allowed"
                 >
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
                     viewBox="0 0 24 24" stroke="currentColor">
@@ -450,89 +450,90 @@
                 <transition name="fade-slide">
                     <div
                     v-if="searchOpen"
-                    class="absolute top-12 left-0 bg-gray-800 border-2 border-teal-600 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100"
+                    class="absolute top-12 left-0 bg-gray-800 border-2 border-green-600 rounded-xl shadow-2xl p-4 w-80 sm:w-96 text-gray-100"
                     @click.stop
                     >
-                    <!-- 🔤 Search Input -->
-                    <div class="relative">
-                        <input
-                        v-model="searchQuery"
-                        type="text"
-                        placeholder="ابحث..."
-                        class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400"
-                        />
-                        <button
-                        @click="clearSearch"
-                        class="absolute top-3 left-3 text-red-400 hover:text-red-600 font-black transition"
-                        >
-                        ✕
-                        </button>
-                    </div>
-
-                    <!-- 🧩 Search Filters -->
-                    <fieldset class="mt-3 border border-gray-600 rounded-lg p-3">
-                        <!-- Radio Buttons (تظهر فقط لو 'number' مفعّل) -->
-                        <!-- <div v-if="searchFilters.number" class="flex flex-col space-y-2 mt-2">
-                            <label class="flex items-center transition-all duration-100 active:scale-90">
-                                <input
-                                type="radio"
-                                v-model="textNumberMatchMode"
-                                value="enabled"
-                                class="scale-150"
-                                />
-                                <span class="px-2 font-bold">تفعيل</span>
-                            </label>
-                            <label class="flex items-center transition-all duration-100 active:scale-90">
-                                <input
-                                type="radio"
-                                v-model="textNumberMatchMode"
-                                value="disabled"
-                                class="scale-150"
-                                />
-                                <span class="px-2 font-bold">تعطيل</span>
-                            </label>
-                        </div> -->
-
-                        <!-- Checkboxes -->
-                        <div class="flex flex-wrap mt-2 justify-center text-lg">
-                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                        <!-- 🔤 Search Input -->
+                        <div class="relative">
                             <input
-                            type="checkbox"
-                            v-model="searchFilters.title"
-                            class="scale-100"
-                            @change="ensureOneChecked('title')"
+                            v-model="searchQuery"
+                            type="text"
+                            placeholder="ابحث..."
+                            class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400"
                             />
-                            <span class="px-2 font-bold">العنوان</span>
-                        </label>
-                        <label class="flex items-center transition-all duration-100 active:scale-90">
-                            <input
-                            type="checkbox"
-                            v-model="searchFilters.number"
-                            class="scale-100"
-                            @change="ensureOneChecked('number')"
-                            />
-                            <span class="px-2 font-bold">الرقم</span>
-                        </label>
-                        <!-- <label class="flex items-center transition-all duration-100 active:scale-90">
-                            <input
-                            type="checkbox"
-                            v-model="searchFilters.story"
-                            class="scale-100"
-                            @change="ensureOneChecked('story')"
-                            />
-                            <span class="px-2 font-bold">القصة</span>
-                        </label>
-                        <label class="flex items-center transition-all duration-100 active:scale-90">
-                            <input
-                            type="checkbox"
-                            v-model="searchFilters.summary"
-                            class="scale-100"
-                            @change="ensureOneChecked('summary')"
-                            />
-                            <span class="px-2 font-bold">الملخص</span>
-                        </label> -->
+                            <button
+                            @click="clearSearch"
+                            class="absolute top-3 left-3 text-x text-red-600 font-black transition-all duration-100 active:scale-90"
+                            >
+                            ✕
+                            </button>
                         </div>
-                    </fieldset>
+
+                        <!-- 🧩 Search Filters -->
+                        <fieldset class="mt-3 border border-gray-600 rounded-lg p-3">
+                            <!-- Radio Buttons (تظهر فقط لو 'number' مفعّل) -->
+                            <!-- <div v-if="searchFilters.number" class="flex flex-col space-y-2 mt-2">
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="radio"
+                                    v-model="textNumberMatchMode"
+                                    value="enabled"
+                                    class="scale-150"
+                                    />
+                                    <span class="px-2 font-bold">تفعيل</span>
+                                </label>
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="radio"
+                                    v-model="textNumberMatchMode"
+                                    value="disabled"
+                                    class="scale-150"
+                                    />
+                                    <span class="px-2 font-bold">تعطيل</span>
+                                </label>
+                            </div> -->
+
+                            <!-- Checkboxes -->
+                            <div class="flex flex-wrap mt-2 justify-center text-lg">
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="checkbox"
+                                    v-model="searchFilters.number"
+                                    class="scale-100"
+                                    @change="ensureOneChecked('number')"
+                                    />
+                                    <span class="px-2 font-bold">الرقم</span>
+                                </label>   
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="checkbox"
+                                    v-model="searchFilters.title"
+                                    class="scale-100"
+                                    @change="ensureOneChecked('title')"
+                                    />
+                                    <span class="px-2 font-bold">العنوان</span>
+                                </label>
+                                <br><br>
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="checkbox"
+                                    v-model="searchFilters.story"
+                                    class="scale-100"
+                                    @change="ensureOneChecked('story')"
+                                    />
+                                    <span class="px-2 font-bold">القصة</span>
+                                </label>
+                                <label class="flex items-center transition-all duration-100 active:scale-90">
+                                    <input
+                                    type="checkbox"
+                                    v-model="searchFilters.summary"
+                                    class="scale-100"
+                                    @change="ensureOneChecked('summary')"
+                                    />
+                                    <span class="px-2 font-bold">الملخص</span>
+                                </label>
+                            </div>
+                        </fieldset>
                     </div>
                 </transition>
             </div>
@@ -6038,8 +6039,8 @@
                     selectedCategory: 'episodes',
                     activeTab: { episodes: 0, movies: 0, mangas: 0 },
                     searchFilters: {
-                        title: true,
-                        number: false,
+                        number: true,
+                        title: false,
                         story: false,
                         summary: false,
                     },
