--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -494,7 +494,7 @@
                             </div> -->
 
                             <!-- Checkboxes -->
-                            <div class="flex flex-wrap mt-2 justify-center text-lg gap-4">
+                            <div class="flex flex-wrap mt-2 justify-center text-lg">
                                 <!-- الصف الأول -->
                                 <div class="flex gap-4">
                                     <label class="flex items-center transition-all duration-100 active:scale-90">
@@ -518,7 +518,7 @@
                                 </div>
 
                                 <!-- الصف الثاني -->
-                                <div class="flex gap-4 mt-2">
+                                <div class="flex gap-4">
                                     <label class="flex items-center transition-all duration-100 active:scale-90">
                                         <input
                                             type="checkbox"
