--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -469,8 +469,7 @@
                             </button>
                         </div>
 
-                        <!-- 🧩 Search Filters -->
-                        <fieldset class="mt-3 border border-gray-600 rounded-lg p-3">
+                        <fieldset class="mt-3 border border-gray-600 rounded-lg py-3 px-2">
                             <!-- Radio Buttons (تظهر فقط لو 'number' مفعّل) -->
                             <!-- <div v-if="searchFilters.number" class="flex flex-col space-y-2 mt-2">
                                 <label class="flex items-center transition-all duration-100 active:scale-90">
@@ -492,10 +491,7 @@
                                     <span class="px-2 font-bold">تعطيل</span>
                                 </label>
                             </div> -->
-
-                            <!-- Checkboxes -->
-                            <div class="flex flex-wrap mt-2 justify-center text-lg">
-                                <!-- الصف الأول -->
+                            <div class="flex flex-wrap mt-2 justify-between text-lg gap-4">
                                 <div class="flex gap-4">
                                     <label class="flex items-center transition-all duration-100 active:scale-90">
                                         <input
@@ -517,7 +513,6 @@
                                     </label>
                                 </div>
 
-                                <!-- الصف الثاني -->
                                 <div class="flex gap-4">
                                     <label class="flex items-center transition-all duration-100 active:scale-90">
                                         <input
