--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -469,7 +469,7 @@
                             </button>
                         </div>
 
-                        <fieldset class="mt-3 border border-gray-600 rounded-lg py-3 px-2">
+                        <fieldset class="mt-3 border border-gray-600 rounded-lg">
                             <div class="flex justify-center mt-2 text-lg">
                                 <div class="flex flex-col gap-4">
                                     <div class="flex gap-4">
