--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -470,7 +470,7 @@
                         </div>
 
                         <!-- 🧩 Search Filters -->
-                        <fieldset class="mt-3 p-3">
+                        <fieldset classS="mt-3 border border-gray-600 rounded-lg py-3 px-2">
                             <!-- Radio Buttons (تظهر فقط لو 'number' مفعّل) -->
                             <!-- <div v-if="searchFilters.number" class="flex flex-col space-y-2 mt-2">
                                 <label class="flex items-center transition-all duration-100 active:scale-90">
@@ -492,46 +492,50 @@
                                     <span class="px-2 font-bold">تعطيل</span>
                                 </label>
                             </div> -->
+                            <div class="flex justify-center mt-2 text-lg">
+                                <div class="flex flex-col gap-4">
+                                    <div class="flex gap-4">
+                                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                                            <input
+                                                type="checkbox"
+                                                v-model="searchFilters.number"
+                                                class="scale-100"
+                                                @change="ensureOneChecked('number')"
+                                            />
+                                            <span class="px-2 font-bold">الرقم</span>
+                                        </label>
+                                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                                            <input
+                                                type="checkbox"
+                                                v-model="searchFilters.title"
+                                                class="scale-100"
+                                                @change="ensureOneChecked('title')"
+                                            />
+                                            <span class="px-2 font-bold">العنوان</span>
+                                        </label>
+                                    </div>
 
-                            <!-- Checkboxes -->
-                            <div class="flex flex-wrap mt-2 justify-center text-lg">
-                                <label class="flex items-center transition-all duration-100 active:scale-90">
-                                    <input
-                                    type="checkbox"
-                                    v-model="searchFilters.number"
-                                    class="scale-100"
-                                    @change="ensureOneChecked('number')"
-                                    />
-                                    <span class="px-2 font-bold">الرقم</span>
-                                </label>   
-                                <label class="flex items-center transition-all duration-100 active:scale-90">
-                                    <input
-                                    type="checkbox"
-                                    v-model="searchFilters.title"
-                                    class="scale-100"
-                                    @change="ensureOneChecked('title')"
-                                    />
-                                    <span class="px-2 font-bold">العنوان</span>
-                                </label>
-                                <br><br>
-                                <label class="flex items-center transition-all duration-100 active:scale-90">
-                                    <input
-                                    type="checkbox"
-                                    v-model="searchFilters.story"
-                                    class="scale-100"
-                                    @change="ensureOneChecked('story')"
-                                    />
-                                    <span class="px-2 font-bold">القصة</span>
-                                </label>
-                                <label class="flex items-center transition-all duration-100 active:scale-90">
-                                    <input
-                                    type="checkbox"
-                                    v-model="searchFilters.summary"
-                                    class="scale-100"
-                                    @change="ensureOneChecked('summary')"
-                                    />
-                                    <span class="px-2 font-bold">الملخص</span>
-                                </label>
+                                    <div class="flex gap-4">
+                                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                                            <input
+                                                type="checkbox"
+                                                v-model="searchFilters.story"
+                                                class="scale-100"
+                                                @change="ensureOneChecked('story')"
+                                            />
+                                            <span class="px-2 font-bold">القصة</span>
+                                        </label>
+                                        <label class="flex items-center transition-all duration-100 active:scale-90">
+                                            <input
+                                                type="checkbox"
+                                                v-model="searchFilters.summary"
+                                                class="scale-100"
+                                                @change="ensureOneChecked('summary')"
+                                            />
+                                            <span class="px-2 font-bold">الملخص</span>
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </fieldset>
                     </div>
