--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -463,14 +463,14 @@
                             />
                             <button
                             @click="clearSearch"
-                            class="absolute top-3 left-3 text-xl text-red-600 font-black transition-all duration-100 active:scale-90"
+                            class="absolute top-2 left-3 text-xl text-red-600 font-black transition-all duration-100 active:scale-90"
                             >
                             ✕
                             </button>
                         </div>
 
                         <!-- 🧩 Search Filters -->
-                        <fieldset classS="mt-3 border border-gray-600 rounded-lg py-3 px-2">
+                        <fieldset class="mt-3 border border-gray-600 rounded-lg py-3 px-2">
                             <!-- Radio Buttons (تظهر فقط لو 'number' مفعّل) -->
                             <!-- <div v-if="searchFilters.number" class="flex flex-col space-y-2 mt-2">
                                 <label class="flex items-center transition-all duration-100 active:scale-90">
